--- a/code/portfolio/index.html
+++ b/code/portfolio/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
 
-    <link rel="stylesheet" href="./css/normaliz.css">
+    <!--<link rel="stylesheet" href="./css/normaliz.css">-->
     <link rel="stylesheet" href="./css/mobile-styles.css">
 
 </head>
@@ -21,13 +21,15 @@
 
     <section class="hero">
         <h1>Hawzhen</h1>
-        <p class="text-promo">A little site about me.</p>
-        <div>
-            <a href="#" class="button">Contact Me</a>
-        </div>
+        <p class="text-promo">"Art without engineering is dreaming. Engineering without art is calculating."</p>
     </section>
 
+    <div>
+        <a href="#" class="button">Contact Me</a>
+    </div>
+
     <script src="./js/nav.js"></script>
+
 </body>
 
 </html>
