--- a/calculator-code .js/index.html
+++ b/calculator-code .js/index.html
@@ -14,15 +14,24 @@
 
     <input id="total" type="text" name="calculation" readonly="true" value="0">
     <br>
-    <button onclick="calc('√');" class="funcs">√</button><button onclick="calc('AC');" class="funcs">AC</button><button onclick="calc('+/-');" class="funcs">+/-</button><button onclick="calc('%');" class="funcs">%</button><button onclick="calc('/')" class="funcs1">/</button>
+    <button onclick="calc('√');" class="funcs">√</button><button onclick="calc('AC');" class="funcs">AC</button><button
+        onclick="calc('+/-');" class="funcs">+/-</button><button onclick="calc('%');" class="funcs">%</button><button
+        onclick="calc('/')" class="funcs1">/</button>
     <br>
-    <button onclick="calc('∛');" class="funcs">∛</button><button onclick="calc(7);">7</button><button onclick="calc(8);">8</button><button onclick="calc(9);">9</button><button onclick="calc('x'); " class="funcs1">x</button>
+    <button onclick="calc('∛');" class="funcs">∛</button><button onclick="calc(7);">7</button><button
+        onclick="calc(8);">8</button><button onclick="calc(9);">9</button><button onclick="calc('*'); "
+        class="funcs1">*</button>
     <br>
-    <button onclick="calc('π');" class="funcs">π</button><button onclick="calc(4);">4</button><button onclick="calc(5); ">5</button><button onclick="calc(6); ">6</button><button onclick="calc('-'); " class="funcs1">-</button>
+    <button onclick="calc('π');" class="funcs">π</button><button onclick="calc(4);">4</button><button
+        onclick="calc(5); ">5</button><button onclick="calc(6); ">6</button><button onclick="calc('-'); "
+        class="funcs1">-</button>
     <br>
-    <button onclick="calc('x²');" class="funcs">x²</button><button onclick="calc(1);">1</button><button onclick="calc(2); ">2</button><button onclick="calc(3);">3</button><button onclick="calc('+'); " class="funcs1">+</button>
+    <button onclick="calc('x²');" class="funcs">x²</button><button onclick="calc(1);">1</button><button
+        onclick="calc(2); ">2</button><button onclick="calc(3);">3</button><button onclick="calc('+'); "
+        class="funcs1">+</button>
     <br>
-    <button onclick="calc('℃');" class="funcs">℃</button><button onclick="calc('c');" class="funcs">C</button><button onclick="calc(0);" id="zero">0</button><button>.</button><button onclick="calc('='); " class="funcs1">=</button>
+    <button onclick="calc('℃');" class="funcs">℃</button><button onclick="calc('c');" class="funcs">C</button><button
+        onclick="calc(0);" id="zero">0</button><button>.</button><button onclick="calc('='); " class="funcs1">=</button>
 
     <script src="app.js"></script>
 </body>
